# molchanica

./: .gitignore  Cargo.toml  README.md  build.rs  make_release.ps1  make_release.sh  octanol_charge_creation.densities  octanol_charge_creation.densitiesinfo  octanol_charge_creation.engrad  octanol_charge_creation.gbw  octanol_charge_creation.opt  octanol_charge_creation.pc_resp  octanol_charge_creation.property.txt  octanol_charge_creation.vpot  readme.MD  sync.ps1  temp_orca_input.inp  therapeutic_training_config.toml  train_all.ps1  train_one.ps1
.claude/: settings.local.json
gromacs_layer_out/: #traj.trr.1#  em.edr  em.tpr  energy.edr  energy_out.xvg  state.cpt  topol.tpr
install_scripts/: daedalus.desktop  install_opendde.ps1  install_opendde.sh  install_opendde_uv.ps1  install_opendde_venv.sh  setup_linux_desktop.sh
memory/: MEMORY.md  boltz-structure-prediction.md  molchanica-build-validation.md
molecules/: chimera_dock_prep_4mzi.mol2
papers/: tdc_inference.typst
scripts/: download_all.py  download_mols_for_dataset.py  load_AqSolDb_mols.py  populate_hmdb_cids.py  repair_split_mols.py  train_test_split.py  unpack_zinc.py
src/: add_hydrogens.rs  amino_acid_coords.rs  antibody.rs  asa.rs  bond_inference.rs  cam.rs  cam_misc.rs  cartoon_mesh.rs  cli.rs  common_mol_db.parquet  crystal.rs  docking.rs  docking_prep.rs  download_mols.rs  download_pdb.rs  drawing.rs  drawing_wrappers.rs  drug_like.rs  dynamics.rs  element.rs  forces.rs  inputs.rs  integrate.rs  isosurface.rs  isosurface_temp.rs  lib.rs  lipid.rs  lod_generalization.rs  main.rs  marching_cubes.rs  md.rs  mol_alignment.rs  mol_characterization.rs  mol_components.rs  mol_drawing.rs  mol_editor.rs  mol_generation.rs  mol_lig.rs  mol_manip.rs  mol_screening.rs  (+34 more)
src/aa_coords/: bond_vecs.rs  mod.rs  sc_atom_placement.rs  sidechain.rs
src/cuda/: cuda.cu  spme.cu  util.cu  util.cuh
src/docking/: docking_external.rs  docking_prep.rs  docking_prep_external.rs  dynamics.rs  dynamics_playback.rs  external.rs  find_sites.rs  mod.rs  partial_charge.rs  prep.rs  prep_external.rs  site_surface.rs
src/docking/legacy/: mod.rs
src/docking_legacy/: find_sites.rs
src/docking_v2/: mod.rs
src/drawing/: atoms_bonds.rs  mod.rs  ribbon_mesh.rs  wrappers.rs
src/drug_design/: binding.rs
src/dynamics/: amber.rs  amber_lib.rs  ambient.rs  bonded.rs  bonded_forces.rs  mod.rs  neighbors.rs  non_bonded.rs  prep.rs  spme.rs  water_init.rs  water_opc.rs  water_settle.rs
src/file_io/: cif_aux.rs  cif_pdb.rs  cif_secondary_structure.rs  cif_sf.rs  download_mols.rs  map.rs  mod.rs  mol2.rs  mtz.rs  pdb.rs  pdbqt.rs  sdf.rs
src/gromacs/: mod.rs
src/md/: mod.rs  trajectory.rs  viewer.rs
src/md_ml/: mod.rs
src/mol_db/: mod.rs  serialization.rs
src/mol_editor/: add_atoms.rs  mod.rs  templates.rs
src/molecules/: common.rs  conformers.rs  geom_assignment.rs  lipid.rs  mod.rs  nucleic_acid.rs  peptide.rs  pocket.rs  rotatable_bonds.rs  small.rs
src/param_inference/: files.rs  mod.rs
src/pharmacokinetics/: infer.rs  mod.rs  sol_infer.rs  sol_train.rs  train.rs
src/prefs/: file_format.rs  mod.rs
src/properties/: crystal.rs  logp.rs  logp_sim.rs  mixing_analysis.rs  mod.rs  mol_characterization.rs  sol_shrinking_box.rs  water_sol.rs  water_sol_analytic.rs  water_sol_mix.rs
src/screening/: mod.rs  parquet.rs  pharmacophore.rs
src/structure_prediction/: boltz2.rs  boltz_runtime.rs  esm_fold2.rs  mod.rs  open_dde.rs  opendde.rs  pyo3_interface.rs
src/therapeutic/: eval.rs  gnn.rs  infer.rs  logp_sim.rs  mlp.rs  mod.rs  model_eval.rs  mol_gen.rs  non_nn_ml.rs  parquet.rs  pharmacophore.rs  postgres.rs  solubility.rs  train.rs  train_md.rs  train_test_split_indices.rs
src/therapeutic/gnn/: atom_bond.rs  component.rs  mod.rs  spacial.rs
src/ui/: cam.rs  char_adme.rs  ff_params.rs  md.rs  md_viewer.rs  misc.rs  misc_2.rs  mod.rs  mol_data.rs  mol_editor.rs  mol_editor_sidebar.rs  mol_type_tools.rs  orca.rs  pharmacophore.rs  popups.rs  rama_plot.rs  recent_files.rs  sidebar.rs  util.rs  view.rs
src/ui/panels/: md.rs  md_viewer.rs  mod.rs  mol_data.rs  orca.rs  view.rs
src/ui/popup/: ff_params.rs  mod.rs  mol_db.rs  mol_dbs.rs  pharmacophore.rs  rama_plot.rs  structure_pred.rs
src/ui/sidebar/: mod.rs  mol_editor_sidebar.rs
