[package]
name = "molchanica"
version = "0.2.4"
edition = "2024"


# For training our solubility
[[bin]]
name = "train_sol"
path = "src/pharmacokinetics/sol_train.rs"
required-features = ["train-sol"]


[dependencies]
graphics = { version = "0.5.6", features = ["app_utils"] }
egui = "0.33.0"

#egui_tiles = "0.12.0" # For layouts etc. Experimenting
egui-file-dialog = "0.12.0" #  For file dialogs.
egui_plot = "0.34.0"  # For Rama plots

lin_alg = { version = "1.3.13", features = ["encode"] }
na_seq = "0.3.12"
bio_apis = { version = "0.2.4", features = ["encode"] }
bio_files = "0.4.2"
#bio_files = {path = "../bio_files"}
mcubes = "0.1.7"
#dynamics = { version = "0.1.5", features = ["encode"] }
dynamics = { path = "../dynamics", features = ["encode"] }

# For loading and saving config
bincode = "2.0.1"
rayon = "1.10.0"  # Parallel execution on CPU using thread pools.


# todo: A/R. For reflectionss. Remove if you split out the 3D FFT code.
ewald = { version = "0.1.10" }
#ewald = { path = "../ewald" }

# For electron density reflections
rustfft = "6.4.1"

rand = "0.9.2"
regex = "1.12.2"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }

# Trying Burn, to compare to Candle, which we use in Dynamics for partial charge assignment.
#candle-core = { version = "0.9.1" }
#candle-nn = { version = "0.9.1" }
# todo: Features for GPU?
# backends: wgpu, candle, libtorch etc.
# Note: Burn v20 seems to enable dynamic loading for cudarc, causing a conflict. Switching to WGPU for now.
#burn = { version = "0.20.0", features = ["std", "train", "cuda", "ndarray", "fusion", "autotune"], default-features = false }
burn = { version = "0.20.0", features = ["std", "train", "wgpu", "ndarray", "fusion", "autotune"], default-features = false }

serde_json = "1.0.145"  # todo: RM?

# Note: This section must be at the bottom; applies to all elements below it.
[target.'cfg(not(target_os = "windows"))'.dependencies]
cudarc = { version = "0.18.1", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-linking", "cuda-13000"], optional = true }
# Note: The non-cuda one seems to work on a non-nvidia Win with dynamic-linking.
[target.'cfg(target_os = "windows")'.dependencies]
cudarc = { version = "0.18.1", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-linking", "cuda-13000"], optional = true }


# todo: Experimenting for alignmetn
#nalgebra = "0.34.1"

# We use these when developing locally to reduce friction.
[patch.crates-io]
#graphics = { path = "../../graphics" }
#lin_alg = { path = "../../lin_alg" }
na_seq = { path = "../na_seq" }
bio_apis = { path = "../bio_apis" }
#mcubes = { path = "../mcubes" }
bio_files = { path = "../bio_files" }
dynamics = { path = "../dynamics" }


[build-dependencies]
cuda_setup = { version = "0.1.9", optional = true }
# This is for embedding an application icon, on Windows.
winresource = "0.1.24"

# We feature-gate the CUDA dependency, so this program can be run on computers that don't have a
# suitable graphics chip.
[features]
default = ["cuda"]

#cuda = ["cuda_setup", "cudarc", "lin_alg/cuda", "dynamics/cuda", "dynamics/vkfft", "ewald/vkfft"]
cuda = ["cuda_setup", "cudarc", "lin_alg/cuda", "dynamics/cuda", "dynamics/cufft", "ewald/cufft"]

train-sol = []


[profile.release]
strip = true  # Strip symbols from binary. Size reduction on Linux/Mac.