[package]
name = "molchanica"
version = "0.2.4"
edition = "2024"


# For training our solubility
[[bin]]
name = "train"
path = "src/train_entry.rs"
required-features = ["train"]


[dependencies]
graphics = { version = "0.5.9", features = ["app_utils"] }
egui = "0.33.0"

#egui_tiles = "0.12.0" # For layouts etc. Experimenting
egui-file-dialog = "0.12.0" #  For file dialogs.
egui_plot = "0.34.0"  # For Rama plots

lin_alg = { version = "1.3.13", features = ["encode"] }
na_seq = "0.3.14"
bio_apis = { version = "0.2.4", features = ["encode"] }
bio_files = "0.4.5"
mcubes = "0.1.7"
#dynamics = { version = "0.1.5", features = ["encode"] }
dynamics = { path = "../dynamics", features = ["encode"] }

# For loading and saving config
bincode = "2.0.1"
rayon = "1.10.0"  # Parallel execution on CPU using thread pools.


# todo: A/R. For reflectionss. Remove if you split out the 3D FFT code.
ewald = { version = "0.1.11" }
#ewald = { path = "../ewald" }

# For electron density reflections
rustfft = "6.4.1"

rand = "0.9.2"
regex = "1.12.3"
chrono = "0.4.43"
serde = { version = "1.0.228", features = ["derive"] }

csv = { version = "1.4.0", optional = true }  # Tran only

# Note: Burn v20 only supports cudarc with dynamic-loading. And we get a "cuda_runtime.h" error with it.
# And using WGPU allows us to use this on PCs that have non-nvidia GPUs.
burn = { version = "0.20.1", features = ["std", "train", "fusion", "ndarray", "autotune"], default-features = false }
#burn-cpu = "0.20.1"

serde_json = "1.0.145"  # For [de]serializing ML model configs and scalers.

# Note: This section must be at the bottom; applies to all elements below it.
#[target.'cfg(not(target_os = "windows"))'.dependencies]

# Observation, 2026-02-09: Dynamic Linking seems to be required for Ubuntu; dynamic loading will launch,
# but it will be unable to find the GPU at runtime. edit: Nvm; not working there with loading either.
#cudarc = { version = "0.19.2", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-loading", "cuda-13000"], optional = true }
cudarc = { version = "0.19.2", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-linking", "cuda-13000"], optional = true }

# Note: The non-cuda one seems to work on a non-nvidia Win with dynamic-linking.
#[target.'cfg(target_os = "windows")'.dependencies]
#cudarc = { version = "0.18.1", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-linking", "cuda-13000"], optional = true }

# Convenient for our large quantity of model files.
include_dir = "0.7.4"

# We use these when developing locally to reduce friction.
[patch.crates-io]
graphics = { path = "../../graphics" }
#lin_alg = { path = "../../lin_alg" }
#na_seq = { path = "../na_seq" }
bio_apis = { path = "../bio_apis" }
#mcubes = { path = "../mcubes" }
bio_files = { path = "../bio_files" }
dynamics = { path = "../dynamics" }


[build-dependencies]
cuda_setup = { version = "0.1.9", optional = true }
# This is for embedding an application icon, on Windows.
winresource = "0.1.30"

# We feature-gate the CUDA dependency, so this program can be run on computers that don't have a
# suitable graphics chip.
[features]
default = ["cuda"]

#cuda = ["cuda_setup", "cudarc", "lin_alg/cuda", "dynamics/cuda", "dynamics/vkfft", "ewald/vkfft"]
cuda = ["cuda_setup", "cudarc", "lin_alg/cuda", "dynamics/cuda", "dynamics/cufft", "ewald/cufft"]

# We use GPU for training only.
train = ["burn/wgpu", "burn/tui", "csv"]


[profile.release]
strip = true  # Strip symbols from binary. Size reduction on Linux/Mac.